Update docs.go, swagger.json, swagger.yaml, and 4 more files
