# qualify-backend/docs/swagger.yaml
@@ -800,6 +800,46 @@ paths:
       summary: Listar clientes
       tags:
       - Clientes
+  /login:
+    get:
+      consumes:
+      - application/json
+      description: Faz login com os dados fornecidos
+      parameters:
+      - description: Objeto do usuário
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/pkg.UserLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/pkg.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Fazer login
+      tags:
+      - Usuários
   /proposals:
     get:
       consumes:
